# Phalakam

./: .gitignore  CMakeLists.txt  README.md
Anveshak/: CMakeLists.txt
Anveshak/resources/qml/: main.qml
Anveshak/src/: main.cpp
Lekhak/: CMakeLists.txt
Lekhak/include/: FindAndReplaceDialog.hpp  MainWindow.hpp
Lekhak/resources/: Lekhak.qrc
Lekhak/resources/qml/: main.qml
Lekhak/src/: FindAndReplaceDialog.cpp  Main.cpp  MainWindow.cpp  main.cpp
Navik/: CMakeLists.txt
Navik/include/: DirectoryView.hpp  FileManagerActions.hpp  MainWindow.hpp
Navik/resources/: Navik.qrc
Navik/resources/qml/: main.qml
Navik/src/: DirectoryView.cpp  FileManagerActions.cpp  Main.cpp  MainWindow.cpp  main.cpp
Resources/: system.jwmrc
TreOnzTerminal/: CMakeLists.txt
TreOnzTerminal/lib/: ColorScheme.cpp  Emulation.cpp  Emulation.h  Filter.cpp  Filter.h  History.cpp  HistorySearch.cpp  HistorySearch.h  KeyboardTranslator.cpp  Pty.cpp  Pty.h  SearchBar.cpp  SearchBar.h  Session.cpp  Session.h  TerminalCharacterDecoder.cpp  TerminalDisplay.cpp  Vt102Emulation.cpp  kprocess.cpp  kprocess.h  kpty.cpp  kptydevice.h  kptyprocess.cpp  kptyprocess.h  qtermwidget.cpp  qtermwidget.h
